# mutter

./: .gitignore  .gitlab-ci.yml  config.h.meson  meson.build  meson_options.txt
clutter/clutter/: clutter-actor-private.h  clutter-actor.c  clutter-actor.h  clutter-backend-private.h  clutter-backend.c  clutter-backend.h  clutter-bind-constraint.c  clutter-box-layout.c  clutter-brightness-contrast-effect.c  clutter-click-gesture.c  clutter-click-gesture.h  clutter-clone.c  clutter-clone.h  clutter-color-manager-private.h  clutter-color-manager.c  clutter-color-state.c  clutter-color-state.h  clutter-colorize-effect.c  clutter-content-private.h  clutter-content.c  clutter-content.h  clutter-context.c  clutter-context.h  clutter-debug.h  clutter-deform-effect.c  clutter-desaturate-effect.c  clutter-effect-private.h  clutter-effect.c  clutter-effect.h  clutter-enums.h  clutter-event-private.h  clutter-event.c  clutter-event.h  clutter-flow-layout.c  clutter-frame-clock-private.h  clutter-frame-clock.c  clutter-frame-clock.h  clutter-frame-private.h  clutter-frame.c  clutter-frame.h  (+53 more)
cogl/: meson.build
cogl/cogl/: cogl-context-private.h  cogl-context.c  cogl-context.h  cogl-dma-buf-handle.c  cogl-driver.h  cogl-feature-private.c  cogl-framebuffer.c  cogl-framebuffer.h  cogl-onscreen-private.h  cogl-onscreen.c  cogl-onscreen.h  cogl-renderer.c  cogl-renderer.h  cogl-scanout.c  cogl-scanout.h  cogl-trace.c  cogl-trace.h  meson.build
data/: 61-mutter-primary-gpu.rules  meson.build  org.gnome.Mutter.Sdk.desktop.in.in  org.gnome.mutter.gschema.xml.in  org.gnome.mutter.wayland.gschema.xml.in
data/dbus-interfaces/: org.gnome.Mutter.DisplayConfig.xml  org.gnome.Mutter.ScreenCast.xml
doc/: clutter-frame-scheduling.md  tracy.md
mtk/mtk/: mtk.h
po/: POTFILES.in
sdk/: mdk-context.c  mdk-context.h  mdk-keyboard.c  mdk-keyboard.h  mdk-monitor.c  mdk-monitor.h  mdk-pipewire.c  mdk-pipewire.h  mdk-pointer.c  mdk-pointer.h  mdk-session.c  mdk-session.h  mdk-stream.c  mdk-stream.h  mdk-touch.c  mdk-touch.h  mdk-types.h  mdk-viewer.c  mdk-viewer.ui  meson.build  mutter-viewer.gresource.xml
src/: meson.build  org.gnome.Mutter.KeyBindings.xml
src/backends/: dbus-utils.c  meta-backend-private.h  meta-backend-types.h  meta-backend.c  meta-backlight-private.h  meta-backlight-sysfs-private.h  meta-backlight-sysfs.c  meta-backlight.c  meta-backlight.h  meta-color-device.c  meta-color-device.h  meta-color-manager.c  meta-color-store.c  meta-crtc.c  meta-crtc.h  meta-cursor-renderer.c  meta-cursor.c  meta-egl.c  meta-egl.h  meta-eis-client.c  meta-frame-clock.c  meta-frame-clock.h  meta-gles3.c  meta-gles3.h  meta-hdr.c  meta-hdr.h  meta-input-settings-dummy.c  meta-input-settings-private.h  meta-input-settings.c  meta-launcher.c  meta-launcher.h  meta-monitor-config-manager.c  meta-monitor-config-manager.h  meta-monitor-config-migration.c  meta-monitor-config-store.c  meta-monitor-manager-private.h  meta-monitor-manager.c  meta-monitor.c  meta-monitor.h  meta-output.c  (+26 more)
src/common/: meta-utils.c  meta-utils.h
src/compositor/: compositor.c  meta-background-actor-private.h  meta-background-actor.c  meta-background-content-private.h  meta-background-content.c  meta-background-group.c  meta-background-image.c  meta-background.c  meta-compositor-native.c  meta-compositor-view-native.c  meta-compositor-view-native.h  meta-compositor-x11.c  meta-dnd-actor.c  meta-feedback-actor-private.h  meta-feedback-actor.c  meta-plugin-manager.c  meta-plugin-manager.h  meta-window-drag.c  (+11 more)
subprojects/: sysprof.wrap  tracy.wrap
tools/: backlight.py
(+338 files in other folders)
